--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 
   <ion-content>
     <ion-list>
-      <!-- Botón de Cerrar Sesión -->
+     
       <ion-item button (click)="cerrarSesion()">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Cerrar Sesión</ion-label>
@@ -16,11 +16,11 @@
   </ion-content>
 </ion-menu>
 
-<!-- Contenido principal de la página -->
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button> <!-- Botón para abrir el menú lateral -->
+      <ion-menu-button></ion-menu-button> 
     </ion-buttons>
     <ion-title>Home</ion-title>
   </ion-toolbar>
@@ -34,8 +34,11 @@
   </ion-header>
 
   <div id="container" style="text-align: center; margin-top: 20px;">
-    <!-- Mostrar mensaje de bienvenida con el nombre del usuario -->
-    <h2>Bienvenido, {{ nombreUsuario }}!</h2>
+
+    <h2 *ngIf="nombreUsuario; else noUser">Bienvenido, {{ nombreUsuario }}!</h2>
+    <ng-template #noUser>
+      <h2>Bienvenido, invitado!</h2>
+    </ng-template>
   </div>
 </ion-content>
 
