--- a/src/app/recuperar/recuperar.page.html
+++ b/src/app/recuperar/recuperar.page.html
@@ -27,7 +27,7 @@
         </ion-item>
 
         <ion-button (click)="restablecer()" expand="full">
-          Crear nuevo usuario
+          Crear Nuevo usuario
         </ion-button>
       </form>
     </ion-card-content>
