--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,37 +1,95 @@
 <ion-header [translucent]="true">
-  <ion-toolbar style="--background: rgb(33, 33, 160); --color: #ebd300f8;">
+  <ion-toolbar style="--background: rgb(33, 33, 160); --color: #ebd300f8">
     <ion-title>Duoc UC</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="login-content" style="display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 16px; height: 100%;">
-  
-  <div class="login-header" style="margin-bottom: 20px;">
-    <img src="assets/img/Registrapp.png" alt="Logo" class="logo" style="width: 300px; height: auto; margin-bottom: 10px;">
-    <h1 style="margin: 0;">Bienvenido</h1>
-    <p style="margin: 0;">Inicia sesión para continuar</p>
+<ion-content
+  [fullscreen]="true"
+  class="login-content"
+  style="
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 16px;
+    height: 100%;
+  "
+>
+  <div class="login-header" style="margin-bottom: 20px">
+    <img
+      src="assets/img/Registrapp.png"
+      alt="Logo"
+      class="logo"
+      style="width: 300px; height: auto; margin-bottom: 10px"
+    />
+    <h1 style="margin: 0">Bienvenido</h1>
+    <p style="margin: 0">Inicia sesión para continuar</p>
   </div>
- 
-  <form [formGroup]="formulario" class="login-form" style="width: 100%; max-width: 400px;">
-    <ion-item class="input-item" style="width: 100%; margin-bottom: 5px;">
+
+  <form
+    [formGroup]="formulario"
+    class="login-form"
+    style="width: 100%; max-width: 400px"
+  >
+    <ion-item class="input-item" style="width: 100%; margin-bottom: 5px">
       <ion-icon name="person-outline" slot="start"></ion-icon>
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input formControlName="usuario"></ion-input>
+      <ion-input
+        label="Nombre de usuario"
+        labelPlacement="floating"
+        placeholder="Usuario"
+        formControlName="usuario"
+      ></ion-input>
     </ion-item>
-    <ion-item class="input-item" style="width: 100%; margin-bottom: 20px;">
+    <ion-item class="input-item">
       <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input formControlName="password" type="password"></ion-input>
+      <ion-input
+        label="Contraseña"
+        labelPlacement="floating"
+        placeholder="Contraseña"
+        formControlName="password"
+        type="password"
+      ></ion-input>
     </ion-item>
 
-   
-    <ion-button expand="block" class="login-button" color="primary" style="width: 100%; margin-top: 20px;"
-      (click)="ingresar()" >
+    <ion-button
+      expand="block"
+      class="login-button"
+      color="primary"
+      style="width: 100%; margin-top: 20px"
+      (click)="ingresar()"
+    >
       Iniciar Sesión
     </ion-button>
 
-    <div class="login-links" style="margin-top: 10px; text-align: center;">
+    <ion-button
+      expand="block"
+      class="login-button"
+      color="primary"
+      routerLink="/recuperar"
+    >
+      Registrate
+    </ion-button>
+
+    <div class="login-links" style="margin-top: 10px; text-align: center">
       <a routerLink="/pass">¿Olvidaste tu contraseña?</a>
     </div>
   </form>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <div class="footer-content">
+    <div class="footer-links">
+      <a href="#">Acerca de</a>
+      <a href="#">Contacto</a>
+      <a href="#">Política de privacidad</a>
+    </div>
+    <div class="social-icons">
+      <ion-icon name="logo-facebook"></ion-icon>
+      <ion-icon name="logo-twitter"></ion-icon>
+      <ion-icon name="logo-instagram"></ion-icon>
+    </div>
+    <div class="copyright">© 2024 Duoc UC. Todos los derechos reservados.</div>
+  </div>
+</ion-footer>
