--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,47 +7,61 @@
 
   <ion-content>
     <ion-list>
-     
       <ion-item button (click)="cerrarSesion()">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Cerrar Sesión</ion-label>
+      </ion-item>
+      <ion-item button>
+        <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
+        <ion-label>Mis Asistencias</ion-label>
+      </ion-item>
+      <ion-item button>
+        <ion-icon name="mail-outline" slot="start"></ion-icon>
+        <ion-label>Contacto</ion-label>
+      </ion-item>
+      <ion-item button>
+        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+        <ion-label>Acerca de</ion-label>
+      </ion-item>
+      <ion-item button>
+        <ion-icon name="shield-checkmark-outline" slot="start"></ion-icon>
+        <ion-label>Política de Privacidad</ion-label>
       </ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
 
-
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button> 
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Home</ion-title>
+    <ion-title>RegistrAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" id="main-content">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
+      <ion-title size="large">RegistrAPP</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container" style="text-align: center; margin-top: 20px;">
-
-    <h2 *ngIf="nombreUsuario; else noUser">Bienvenido, {{ nombreUsuario }}!</h2>
+  <div id="container" class="welcome-container">
+    <h2 class="welcome-text" *ngIf="nombreUsuario; else noUser">¡Bienvenido, {{ nombreUsuario }}!</h2>
     <ng-template #noUser>
-      <h2>Bienvenido, invitado!</h2>
+      <h2 class="welcome-text">¡Bienvenido, invitado!</h2>
     </ng-template>
-  </div>
-</ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-    <div style="width: 100%; display: flex; justify-content: center; align-items: center;">
-      <ion-button shape="round" color="primary" style="--padding-start: 0; --padding-end: 0; width: 60px; height: 60px; display: flex; justify-content: center; align-items: center;">
-        <ion-icon name="camera-outline" slot="icon-only" style="font-size: 24px;"></ion-icon>
+    
+    <div class="button-container">
+      <ion-button expand="full" color="primary">
+        <ion-icon slot="start" name="scan-outline"></ion-icon>
+        Escanea
+      </ion-button>
+      <ion-button expand="full" color="secondary">
+        <ion-icon slot="start" name="checkmark-circle-outline"></ion-icon>
+        Mis Asistencias
       </ion-button>
     </div>
-  </ion-toolbar>
-</ion-footer>
+  </div>
+</ion-content>
