--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,6 +1,13 @@
 /* Estilos generales */
 ion-content {
   --background: #f4f5f8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 16px;
+  height: 100%;
 }
 
 .logo {
