--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -63,7 +63,7 @@ ion-input {
 ion-header {
   ion-toolbar {
     --background: #014ba0;
-    --color: #ebd300f8;
+    --color: #def7ff;
   }
 
   .header-content {
@@ -79,7 +79,7 @@ ion-header {
   }
 
   ion-title {
-    color: #ebd300f8;
+    color: #def7ff;
     font-weight: bold;
     font-size: 20px;
   }
@@ -103,7 +103,7 @@ ion-footer {
     margin-bottom: 15px;
 
     a {
-      color: #ebd300f8;
+      color: #def7ff;
       text-decoration: none;
       margin: 0 10px;
       font-size: 14px;
@@ -122,7 +122,7 @@ ion-footer {
 
     ion-icon {
       font-size: 24px;
-      color: #ebd300f8;
+      color: #def7ff;
       margin: 0 10px;
       cursor: pointer;
       transition: opacity 0.3s ease;
@@ -134,7 +134,7 @@ ion-footer {
   }
 
   .copyright {
-    color: #ebd300f8;
+    color: #def7ff;
     font-size: 12px;
     text-align: center;
   }
