--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,15 +15,14 @@
         <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
         <ion-label>Mis Asistencias</ion-label>
       </ion-item>
-      <ion-item button>
-        <ion-icon name="mail-outline" slot="start"></ion-icon>
-        <ion-label>Contacto</ion-label>
-      </ion-item>
-      <ion-item button>
+    </ion-list>
+    
+    <ion-list class="fixed-bottom">
+      <ion-item button (click)="abrirEnlace('https://www.duoc.cl/reglamento-academico/?_ga=2.76810513.506779572.1726959603-1754374455.1715652837')">
         <ion-icon name="information-circle-outline" slot="start"></ion-icon>
         <ion-label>Acerca de</ion-label>
       </ion-item>
-      <ion-item button>
+      <ion-item button (click)="abrirEnlace('https://www.duoc.cl/politica-privacidad/?_ga=2.76770833.506779572.1726959603-1754374455.1715652837')">
         <ion-icon name="shield-checkmark-outline" slot="start"></ion-icon>
         <ion-label>Política de Privacidad</ion-label>
       </ion-item>
@@ -36,7 +35,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>RegistrAPP</ion-title>
+    <div class="header-content">
+      <ion-title>RegistrAPP</ion-title>
+    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -67,3 +68,23 @@
     </div>
   </div>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <div class="footer-content">
+    <div class="social-icons">
+      <ion-icon
+        name="mail-outline"
+        (click)="abrirEnlace('https://www.duoc.cl/sedes/san-joaquin/informacion/')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-twitter"
+        (click)="abrirEnlace('https://x.com/DuocUC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-instagram"
+        (click)="abrirEnlace('https://www.instagram.com/duocucsanjoaquin/?hl=es')"
+      ></ion-icon>
+    </div>
+    <div class="copyright">© 2024 Duoc UC. Todos los derechos reservados.</div>
+  </div>
+</ion-footer>
