--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,8 +7,7 @@
 <ion-content class="login-content">
   <div class="login-header" style="margin-bottom: 20px">
     <img src="assets/img/Registrapp.png" alt="Logo" class="logo" />
-    <h1 style="margin: 0">Bienvenido</h1>
-    <p style="margin: 0">Inicia sesión para continuar</p>
+    <h1 style="margin: 0">Inicia sesión para continuar</h1>
   </div>
 
   <form [formGroup]="formulario" class="login-form">
