--- a/src/app/pages/e404/e404.page.html
+++ b/src/app/pages/e404/e404.page.html
@@ -1,18 +1,15 @@
+<ion-header style="align-items: center">
+  <ion-title>Página no Encontrada</ion-title>
+</ion-header>
+
 <ion-content class="ion-padding">
-
-
-  <div class="text-container">
-    <ion-title>Página no Encontrada</ion-title>
-  </div>
-
   <div class="img-container">
     <ion-img src="assets/img/error_404.svg"></ion-img>
   </div>
-
-
+</ion-content>
+<ion-footer>
   <ion-button routerLink="/login" expand="block" class="ion-margin-top">
-    <ion-icon name="home" slot="start"></ion-icon> 
+    <ion-icon name="home" slot="start"></ion-icon>
     Login
   </ion-button>
-  
-</ion-content>
+</ion-footer>
