--- a/src/app/pages/pass/pass.page.html
+++ b/src/app/pages/pass/pass.page.html
@@ -7,29 +7,18 @@
 <ion-content class="ion-padding">
   <div class="change-password-container">
     <div class="change-password-header">
-      <h2>Cambiar Contraseña</h2>
-      <p>Ingresa tu nombre de usuario y la nueva contraseña.</p>
+      <h2>Cambio de Contraseña</h2>
+      <p>Ingresa tu correo electronico para cambiar tu contraseña.</p>
     </div>
 
     <form [formGroup]="formulario" class="change-password-form">
       <ion-item class="input-item">
         <ion-icon name="person-outline" slot="start"></ion-icon>
         <ion-input
-          label="Nombre de usuario"
+          label="Email"
           labelPlacement="floating"
-          placeholder="Usuario"
-          formControlName="usuario"
-        ></ion-input>
-      </ion-item>
-
-      <ion-item class="input-item">
-        <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
-        <ion-input
-          label="Contraseña"
-          labelPlacement="floating"
-          placeholder="Contraseña"
-          formControlName="nuevaPassword"
-          type="password"
+          placeholder="Email"
+          formControlName="email"
         ></ion-input>
       </ion-item>
 
@@ -38,7 +27,7 @@
         class="login-button"
         (click)="cambiarContrasena()"
       >
-        Cambiar Contraseña
+        Enviar correo de recuperacion
       </ion-button>
 
       <div class="change-password-links">
@@ -50,15 +39,19 @@
 
 <ion-footer class="ion-no-border">
   <div class="footer-content">
-    <div class="footer-links">
-      <a href="#">Acerca de</a>
-      <a href="#">Contacto</a>
-      <a href="#">Política de privacidad</a>
-    </div>
     <div class="social-icons">
-      <ion-icon name="logo-facebook"></ion-icon>
-      <ion-icon name="logo-twitter"></ion-icon>
-      <ion-icon name="logo-instagram"></ion-icon>
+      <ion-icon
+        name="mail-outline"
+        (click)="abrirEnlace('https://www.duoc.cl/sedes/san-joaquin/informacion/')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-twitter"
+        (click)="abrirEnlace('https://x.com/DuocUC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-instagram"
+        (click)="abrirEnlace('https://www.instagram.com/duocucsanjoaquin/?hl=es')"
+      ></ion-icon>
     </div>
     <div class="copyright">© 2024 Duoc UC. Todos los derechos reservados.</div>
   </div>
