--- a/src/app/pages/homep/homep.page.html
+++ b/src/app/pages/homep/homep.page.html
@@ -7,13 +7,17 @@
 
   <ion-content>
     <ion-list>
+      <ion-item (click)="home()" [attr.tabindex]="0">
+        <ion-icon name="home" slot="start"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-item>
+      <ion-item (click)="asignaturas()" [attr.tabindex]="0">
+        <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
+        <ion-label>Asignaturas</ion-label>
+      </ion-item>
       <ion-item button (click)="cerrarSesion()" [attr.tabindex]="0">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Cerrar Sesión</ion-label>
-      </ion-item>
-      <ion-item [routerLink]="['/asignaturas']" [attr.tabindex]="0">
-        <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
-        <ion-label>Asignaturas</ion-label>
       </ion-item>
     </ion-list>
 
