--- a/src/app/pages/e404/e404.page.scss
+++ b/src/app/pages/e404/e404.page.scss
@@ -1,17 +1,40 @@
 .text-container {
-    text-align: center; 
-    margin-top: 20px; 
-  }
-  
-  .img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh; 
-  }
-  
-  ion-img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  
+  text-align: center;
+  font-size: 1.4rem;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  margin-top: 20px;
+}
+
+ion-img {
+  max-width: 80%;
+  max-height: 100%;
+}
+
+.message-container {
+  text-align: center;
+  font-size: 1.1rem;
+  color: #666;
+  margin-top: 10px;
+  padding: 0 20px;
+}
+
+ion-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+}
+
+.button-center {
+  width: 90%;
+  max-width: 300px;
+  margin: 0 auto;
+}
