cambio en cursor del menu principal

--- a/src/app/pages/asignaturas/asignaturas.page.html
+++ b/src/app/pages/asignaturas/asignaturas.page.html
@@ -7,11 +7,11 @@
 
   <ion-content>
     <ion-list>
-      <ion-item (click)="home()" [attr.tabindex]="0">
+      <ion-item button (click)="home()" [attr.tabindex]="0">
         <ion-icon name="home" slot="start"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-item>
-      <ion-item (click)="asignaturas()" [attr.tabindex]="0">
+      <ion-item button (click)="asignaturas()" [attr.tabindex]="0">
         <ion-icon name="checkmark-circle-outline" slot="start"></ion-icon>
         <ion-label>Asignaturas</ion-label>
       </ion-item>
