--- a/src/app/pages/e404/e404.page.scss
+++ b/src/app/pages/e404/e404.page.scss
@@ -1,40 +1,43 @@
-.text-container {
-  text-align: center;
-  font-size: 1.4rem;
-  margin-top: 20px;
-  font-weight: bold;
+/*======================
+    404 page
+=======================*/
+
+.page_404 {
+  padding: 40px 0;
+  background: #fff;
+  font-family: "Arvo", serif;
 }
 
-.img-container {
-  display: flex;
-  justify-content: center;
+.page_404 img {
+  width: 100%;
+}
+
+.four_zero_four_bg {
+  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  height: 400px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
   align-items: center;
-  height: 50vh;
-  margin-top: 20px;
-}
-
-ion-img {
-  max-width: 80%;
-  max-height: 100%;
-}
-
-.message-container {
   text-align: center;
-  font-size: 1.1rem;
-  color: #666;
-  margin-top: 10px;
-  padding: 0 20px;
 }
 
-ion-footer {
-  display: flex;
-  justify-content: center;
+.four_zero_four_bg h1 {
+  font-size: 80px;
+}
+
+.four_zero_four_bg h3 {
+  font-size: 80px;
+}
+
+.link_404 {
+  color: #fff !important;
+  padding: 10px 20px;
+  background: #365ada;
+  margin: 20px 0;
+}
+.contant_box_404 {
+  margin-top: -50px;
+  text-align: center;
   align-items: center;
-  padding: 15px;
-}
-
-.button-center {
-  width: 90%;
-  max-width: 300px;
-  margin: 0 auto;
 }
