Botones en menu lateral

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,6 +17,10 @@
         <ion-label>Mis Asistencias</ion-label>
       </ion-item>
       -->
+      <ion-item button (click)="justificarAsistencia()" [attr.tabindex]="0">
+        <ion-icon name="document-text-outline" slot="start"></ion-icon>
+        <ion-label>Justificar Asistencia</ion-label>
+      </ion-item>
     </ion-list>
 
     <ion-list class="fixed-bottom">
