--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -10,6 +10,9 @@
       <ion-item button (click)="cerrarSesion()" [attr.tabindex]="0">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Cerrar Sesión</ion-label>
+      </ion-item><ion-item button (click)="irAlHome()" [attr.tabindex]="0">
+        <ion-icon name="home-outline" slot="start"></ion-icon>
+        <ion-label>Home</ion-label>
       </ion-item>
     </ion-list>
 
@@ -77,9 +80,18 @@
 <ion-footer class="ion-no-border">
   <div class="footer-content">
     <div class="social-icons">
-      <ion-icon name="mail-outline" (click)="abrirEnlace('https://www.duoc.cl/sedes/san-joaquin/informacion/')"></ion-icon>
-      <ion-icon name="logo-twitter" (click)="abrirEnlace('https://x.com/DuocUC')"></ion-icon>
-      <ion-icon name="logo-instagram" (click)="abrirEnlace('https://www.instagram.com/duocucsanjoaquin/')"></ion-icon>
+      <ion-icon
+        name="mail-outline"
+        (click)="abrirEnlace('https://www.duoc.cl/sedes/san-joaquin/informacion/')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-twitter"
+        (click)="abrirEnlace('https://x.com/DuocUC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-instagram"
+        (click)="abrirEnlace('https://www.instagram.com/duocucsanjoaquin/?hl=es')"
+      ></ion-icon>
     </div>
     <div class="copyright">© 2024 Duoc UC. Todos los derechos reservados.</div>
   </div>
