--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -10,7 +10,7 @@
       <ion-item button (click)="cerrarSesion()" [attr.tabindex]="0">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Cerrar Sesión</ion-label>
-      </ion-item><ion-item button (click)="irAlHome()" [attr.tabindex]="0">
+      </ion-item><ion-item button (click)="home()" [attr.tabindex]="0">
         <ion-icon name="home-outline" slot="start"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-item>
@@ -65,34 +65,27 @@
   </div>
 
  
-  <div class="button-container" style="display: flex; flex-direction: column; align-items: center; padding: 16px;">
-    <ion-button color="primary" expand="block" fill="outline">
+  <div class="button-container" style="display: flex; justify-content: center; padding: 16px;">
+    <ion-button color="primary" fill="outline" style="width: 48%; margin-right: 4px;">
       <ion-icon slot="start" name="image-outline"></ion-icon>
       Subir Foto
     </ion-button>
-    <ion-button color="primary" expand="block" fill="outline" style="margin-top: 8px;">
+    <ion-button color="primary" fill="outline" style="width: 48%; margin-left: 4px;">
       <ion-icon slot="start" name="document-text-outline"></ion-icon>
       Subir PDF
     </ion-button>
   </div>
+
+  <div style="display: flex; justify-content: center; padding: 16px;">
+    <ion-button expand="block" color="primary" (click)="enviar()" style="width: 90%;">
+      Enviar
+    </ion-button>
+  </div>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="margin-bottom: 16px; margin-right: 16px;">
+    <ion-fab-button (click)="home()">
+      <ion-icon name="home-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
 
-<ion-footer class="ion-no-border">
-  <div class="footer-content">
-    <div class="social-icons">
-      <ion-icon
-        name="mail-outline"
-        (click)="abrirEnlace('https://www.duoc.cl/sedes/san-joaquin/informacion/')"
-      ></ion-icon>
-      <ion-icon
-        name="logo-twitter"
-        (click)="abrirEnlace('https://x.com/DuocUC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor')"
-      ></ion-icon>
-      <ion-icon
-        name="logo-instagram"
-        (click)="abrirEnlace('https://www.instagram.com/duocucsanjoaquin/?hl=es')"
-      ></ion-icon>
-    </div>
-    <div class="copyright">© 2024 Duoc UC. Todos los derechos reservados.</div>
-  </div>
-</ion-footer>
