--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -94,7 +94,7 @@
   </div>
   <div class="camera-button">
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button (click)="scan()">
+      <ion-fab-button>
         <ion-icon name="camera"></ion-icon>
       </ion-fab-button>
     </ion-fab>
