--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -7,23 +7,34 @@
 
   <ion-content>
     <ion-list>
+      <ion-item button (click)="home()" [attr.tabindex]="0">
+        <ion-icon name="home" slot="start"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-item>
+      <ion-item button (click)="justificarAsistencia()" [attr.tabindex]="0">
+        <ion-icon name="document-text-outline" slot="start"></ion-icon>
+        <ion-label>Justificar Asistencia</ion-label>
+      </ion-item>
       <ion-item button (click)="cerrarSesion()" [attr.tabindex]="0">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Cerrar Sesión</ion-label>
-      </ion-item><ion-item button (click)="home()" [attr.tabindex]="0">
-        <ion-icon name="home-outline" slot="start"></ion-icon>
-        <ion-label>Home</ion-label>
       </ion-item>
     </ion-list>
 
     <ion-list class="fixed-bottom">
-      <ion-item button (click)="abrirEnlace('https://www.duoc.cl/reglamento-academico/')"
-                 [attr.tabindex]="0">
+      <ion-item
+        button
+        (click)="abrirEnlace('https://www.duoc.cl/reglamento-academico/?_ga=2.76810513.506779572.1726959603-1754374455.1715652837')"
+        [attr.tabindex]="0"
+      >
         <ion-icon name="information-circle-outline" slot="start"></ion-icon>
         <ion-label>Acerca de</ion-label>
       </ion-item>
-      <ion-item button (click)="abrirEnlace('https://www.duoc.cl/politica-privacidad/')"
-                 [attr.tabindex]="0">
+      <ion-item
+        button
+        (click)="abrirEnlace('https://www.duoc.cl/politica-privacidad/?_ga=2.76770833.506779572.1726959603-1754374455.1715652837')"
+        [attr.tabindex]="0"
+      >
         <ion-icon name="shield-checkmark-outline" slot="start"></ion-icon>
         <ion-label>Política de Privacidad</ion-label>
       </ion-item>
@@ -37,55 +48,29 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <div class="header-content">
-      <ion-title>Justifica tu inasistencia</ion-title>
+      <ion-title>RegistrAPP</ion-title>
     </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content id="main-content" [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Justificar</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" id="main-content"> </ion-content>
 
-  <div style="text-align: center; margin-top: 20px; margin-bottom: 24px;">
-    <ion-label>Selecciona una fecha</ion-label>
-    <ion-datetime
-      display-format="DD/MM/YYYY"
-      placeholder="Selecciona una fecha"
-      presentation="date"
-      (ionChange)="fechaSeleccionada($event)">
-    </ion-datetime>
+<ion-footer class="ion-no-border">
+  <div class="footer-content">
+    <div class="social-icons">
+      <ion-icon
+        name="mail-outline"
+        (click)="abrirEnlace('https://www.duoc.cl/sedes/san-joaquin/informacion/')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-twitter"
+        (click)="abrirEnlace('https://x.com/DuocUC?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor')"
+      ></ion-icon>
+      <ion-icon
+        name="logo-instagram"
+        (click)="abrirEnlace('https://www.instagram.com/duocucsanjoaquin/?hl=es')"
+      ></ion-icon>
+    </div>
+    <div class="copyright">© 2024 Duoc UC. Todos los derechos reservados.</div>
   </div>
-
-  <div style="padding: 0 16px; text-align: center;">
-    <ion-label>Escribe un mensaje</ion-label>
-    <ion-textarea placeholder="Escribe aquí tu justificación..." [(ngModel)]="mensaje"></ion-textarea>
-  </div>
-
- 
-  <div class="button-container" style="display: flex; justify-content: center; padding: 16px;">
-    <ion-button color="primary" fill="outline" style="width: 48%; margin-right: 4px;">
-      <ion-icon slot="start" name="image-outline"></ion-icon>
-      Subir Foto
-    </ion-button>
-    <ion-button color="primary" fill="outline" style="width: 48%; margin-left: 4px;">
-      <ion-icon slot="start" name="document-text-outline"></ion-icon>
-      Subir PDF
-    </ion-button>
-  </div>
-
-  <div style="display: flex; justify-content: center; padding: 16px;">
-    <ion-button expand="block" color="primary" (click)="enviar()" style="width: 90%;">
-      Enviar
-    </ion-button>
-  </div>
-
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="margin-bottom: 16px; margin-right: 16px;">
-    <ion-fab-button (click)="home()">
-      <ion-icon name="home-outline"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-</ion-content>
-
+</ion-footer>
