--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -1,36 +1,3 @@
-<ion-menu side="start" menuId="first" contentId="main-content">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Menú</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-content>
-    <ion-list>
-      <ion-item button (click)="cerrarSesion()" [attr.tabindex]="0">
-        <ion-icon name="log-out-outline" slot="start"></ion-icon>
-        <ion-label>Cerrar Sesión</ion-label>
-      </ion-item><ion-item button (click)="home()" [attr.tabindex]="0">
-        <ion-icon name="home-outline" slot="start"></ion-icon>
-        <ion-label>Home</ion-label>
-      </ion-item>
-    </ion-list>
-
-    <ion-list class="fixed-bottom">
-      <ion-item button (click)="abrirEnlace('https://www.duoc.cl/reglamento-academico/')"
-                 [attr.tabindex]="0">
-        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
-        <ion-label>Acerca de</ion-label>
-      </ion-item>
-      <ion-item button (click)="abrirEnlace('https://www.duoc.cl/politica-privacidad/')"
-                 [attr.tabindex]="0">
-        <ion-icon name="shield-checkmark-outline" slot="start"></ion-icon>
-        <ion-label>Política de Privacidad</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -49,30 +16,15 @@
     </ion-toolbar>
   </ion-header>
 
-  <div style="text-align: center; margin-top: 20px; margin-bottom: 24px;">
-    <ion-label>Selecciona una fecha</ion-label>
-    <ion-datetime
-      display-format="DD/MM/YYYY"
-      placeholder="Selecciona una fecha"
-      presentation="date"
-      (ionChange)="fechaSeleccionada($event)">
-    </ion-datetime>
-  </div>
-
-  <div style="padding: 0 16px; text-align: center;">
+  <div class="centered-container">
     <ion-label>Escribe un mensaje</ion-label>
     <ion-textarea placeholder="Escribe aquí tu justificación..." [(ngModel)]="mensaje"></ion-textarea>
   </div>
 
- 
-  <div class="button-container" style="display: flex; justify-content: center; padding: 16px;">
-    <ion-button color="primary" fill="outline" style="width: 48%; margin-right: 4px;">
-      <ion-icon slot="start" name="image-outline"></ion-icon>
-      Subir Foto
-    </ion-button>
-    <ion-button color="primary" fill="outline" style="width: 48%; margin-left: 4px;">
+  <div style="display: flex; justify-content: center; padding: 16px;">
+    <ion-button color="primary" fill="outline" expand="block" (click)="subirDocumento()" style="max-width: 90%;">
       <ion-icon slot="start" name="document-text-outline"></ion-icon>
-      Subir PDF
+      Subir Documento
     </ion-button>
   </div>
 
@@ -88,4 +40,3 @@
     </ion-fab-button>
   </ion-fab>
 </ion-content>
-
